<resources>
    <string name="app_name">NUMAD25Sp_RanZhou</string>
    <string name="hi"> Hello World </string>
    <string name="About_me"> About Me </string>
    <string name="about_me_name"> Name:  </string>
    <string name="about_me_email"> Email:  </string>


    <string name="Quic"> Quic Calc</string>
    <string name="Calc"> Calc</string>
    <string name="one"> 1 </string>
    <string name="two"> 2 </string>
    <string name="three"> 3 </string>
    <string name="four"> 4 </string>
    <string name="five"> 5 </string>
    <string name="six"> 6 </string>
    <string name="seven"> 7 </string>
    <string name="eight"> 8 </string>
    <string name="nine"> 9 </string>
    <string name="zero"> 0 </string>
    <string name="Plus"> + </string>
    <string name="Minus"> - </string>
    <string name="Clean"> x </string>
    <string name="Equal"> = </string>

    <string name="item_name"> Name </string>
    <string name="item_phone_number"> Phone Number </string>
    <string name="item_delete_contact"> Delete Contact </string>

    <string name="edit_name"> Edit Name </string>
    <string name="edit_phone_number"> Edit Phone Number </string>

    <string name="contact_collector"> Contacts Collector </string>
    <string name="enter_phone_number"> Enter Phone Number </string>
    <string name="enter_name"> Enter Name </string>

    <string name="find_primes"> Find Primes </string>
    <string name="terminate_search"> Terminate Search </string>
    <string name="pacifier_switch"> Pacifier Switch </string>
    <string name="prime_finder"> Prime Finder </string>

</resources>