<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CALC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:padding="8dp"
    android:background="#000000">

    <!-- Display TextView -->
    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Calc"
        android:textSize="48sp"
        android:gravity="center"
        android:background="#FFFFFF"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1" />

    <!-- Row 1 -->
    <Button android:id="@+id/btn1" android:text="@string/one" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn2" android:text="@string/two" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn3" android:text="@string/three" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        android:layout_margin="16dp" />

    <!-- Row 2 -->
    <Button android:id="@+id/btn4" android:text="@string/four" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn5" android:text="@string/five" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintBottom_toTopOf="@id/btn8"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn6" android:text="@string/six" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn9"
        android:layout_margin="16dp" />

    <!-- Row 3 -->
    <Button android:id="@+id/btn7" android:text="@string/seven" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn8" android:text="@string/eight" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn9" android:text="@string/nine" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnMinus"
        android:layout_margin="16dp" />

    <!-- Row 4 -->
    <Button android:id="@+id/btnPlus" android:text="@string/Plus" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn0"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btn0" android:text="@string/zero" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn8"
        app:layout_constraintStart_toEndOf="@id/btnPlus"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        android:layout_margin="23dp" />

    <Button android:id="@+id/btnMinus" android:text="@string/Minus" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        android:layout_margin="16dp" />

    <!-- Row 5 -->
    <Button android:id="@+id/btnClear" android:text="@string/Clean" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnPlus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp" />

    <Button android:id="@+id/btnEquals" android:text="@string/Equal" android:textSize="32sp" android:layout_width="0dp" android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
